--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@types/react": "^18.0.29",
     "babel-loader": "^9.1.2",
     "typescript": "^5.0.2",
     "webpack": "^5.76.3",
