--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.20.2",
     "@types/react": "^18.0.29",
     "babel-loader": "^9.1.2",
+    "jsonc-parser": "^3.2.0",
     "typescript": "^5.0.2",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1"
