--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "dev": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
     "@types/react": "^18.0.29",
     "babel-loader": "^9.1.2",
     "jsonc-parser": "^3.2.0",
