--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
     "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
     "jsonc-parser": "^3.2.0",
     "typescript": "^5.0.2",
