--- a/babel.config.json
+++ b/babel.config.json
@@ -2,7 +2,8 @@
   "presets": [
     [
       "@babel/preset-env", {
-        "useBuiltIns": "usage"
+        "useBuiltIns": "usage",
+        "corejs": 3
       }
     ],
     [
