--- a/babel.config.json
+++ b/babel.config.json
@@ -2,7 +2,7 @@
   "presets": [
     [
       "@babel/preset-env", {
-        "useBuiltIns": "usage",
+        "useBuiltIns": false,
         "corejs": 3
       }
     ],
