feat: useBuiltIns: entry

--- a/babel.config.json
+++ b/babel.config.json
@@ -2,8 +2,7 @@
   "presets": [
     [
       "@babel/preset-env", {
-        "useBuiltIns": false,
-        "corejs": 3
+        "useBuiltIns": "entry"
       }
     ],
     [
