feat: 解决不存在react的问题

--- a/babel.config.json
+++ b/babel.config.json
@@ -11,5 +11,15 @@
     [
       "@babel/preset-typescript"
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "throwIfNamespace": false, // defaults to true
+        "runtime": "automatic" // defaults to classic
+        // "importSource": "custom-jsx-library" // defaults to react
+      }
+    ]
   ]
 }
