--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.29.1",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
